--- a/tubes.css
+++ b/tubes.css
@@ -5,7 +5,7 @@
 }
 
 body {
-	 font-family: sans-serif; text-align: center;
+	font-family: Arial, Helvetica, sans-serif; text-align: center;
 }
 /*
 .teks{
@@ -18,3 +18,41 @@ body {
 	left: 100px;
 	
 }
+
+
+/* reset our lists to remove bullet points and padding */
+.mainmenu, .submenu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+/* make ALL links (main and submenu) have padding and background color */
+.mainmenu a {
+  display: block;
+  text-decoration: none;
+  padding: 10px;
+ 
+}
+
+.navigation {
+  width: 300px;
+}
+
+.submenu {
+overflow: hidden;
+display: none;
+-webkit-transition: all 0.5s ease-out;
+}
+
+.dropdown{
+  font-size: 14px;
+  margin-bottom: -20px;
+}
+
+.dropdown a{
+  color: #F2F2F2;
+}
+
+
+
